--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Tim Song / Homepage"
+title                    : "Tim Song's Homepage"
 title_separator          : "-"
 name                     : &name "Tim(Yunzhou) Song"
 description              : &description "I am a first-year Master's student at the University of Pennsylvania majoring in Robotics. I'm conducting research focusing on 3D vision, geometry, and graphics supervised by Prof. Kostas Kostas Daniilidis, Prof. Lingjie Liu and Jiahui Lei."
@@ -22,7 +22,7 @@ repository               : "github.com/TimSong412"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Welcome to my Site!"
   pronouns         : "He/Him" 
   bio              : "Short biography for the left-hand sidebar"
   location         : "Philadelphia, U.S."
@@ -34,20 +34,20 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  # orcid            : "http://orcid.org/yourorcidurl"
+  # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  # researchgate     : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "github.com/TimSong412"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  # bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
