--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Tim Song's Homepage"
+title                    : "Tim(Yunzhou) Song"
 title_separator          : "-"
 name                     : &name "Tim(Yunzhou) Song"
 description              : &description "I am a first-year Master's student at the University of Pennsylvania majoring in Robotics. I'm conducting research focusing on 3D vision, geometry, and graphics supervised by Prof. Kostas Kostas Daniilidis, Prof. Lingjie Liu and Jiahui Lei."
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Welcome to my Site!"
   pronouns         : "He/Him" 
-  bio              : "Short biography for the left-hand sidebar"
+  # bio              : "Short biography for the left-hand sidebar"
   location         : "Philadelphia, U.S."
   employer         : "University of Pennsylvania"
   uri              : # URL
