--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Tim's Homepage"
 title_separator          : "-"
 name                     : &name "Tim(Yunzhou) Song"
-description              : &description "I am a first-year Master's student at the University of Pennsylvania majoring in Robotics. I'm conducting research focusing on 3D vision, geometry, and graphics supervised by Prof. Kostas Kostas Daniilidis, Prof. Lingjie Liu and Jiahui Lei."
+description              : &description "I am a first-year Master's student at the University of Pennsylvania majoring in Robotics. I'm conducting research focusing on 3D vision, geometry, and graphics supervised by Prof. Kostas Kostas Daniilidis, Prof. Lingjie Liu, and Jiahui Lei."
 url                      : https://TimSong412.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "github.com/TimSong412"
@@ -24,7 +24,7 @@ author:
   avatar           : "TimSong.jpg"
   name             : "Tim (Yunzhou) Song"
   pronouns         : "He/Him" 
-  bio              : "I'm glad to be called Tim!"
+  bio              : "I'm glad to be called Tim! I am a Master's student majoring in robotics at the GRASP Lab, University of Pennsylvania. I am conducting research under the supervision of Prof. Kostas Daniilidis, Prof. Lingjie Liu, and Jiahui Lei. Before that, I graduated from Zhejiang University and participated in several research projects of Prof. Xiaowei Zhou."
   location         : "Philadelphia, U.S."
   employer         : "University of Pennsylvania"
   uri              : # URL
