--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "TimSong.jpg"
   name             : "Tim (Yunzhou) Song"
   pronouns         : "He/Him" 
-  bio              : "I'm glad to be called Tim! I am a Master's student majoring in robotics at the GRASP Lab, University of Pennsylvania. I am conducting research under the supervision of Prof. Kostas Daniilidis, Prof. Lingjie Liu, and Jiahui Lei. Before that, I graduated from Zhejiang University and participated in several research projects of Prof. Xiaowei Zhou."
+  bio              : "I'm glad to be called Tim! "
   location         : "Philadelphia, U.S."
   employer         : "University of Pennsylvania"
   uri              : # URL
