--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "github.com/TimSong412"
 author:
   # Biographic information
   avatar           : "TimSong.jpg"
-  name             : "Tim (Yunzhou) Song"
+  name             : "Tim (Yunzhou) Song \n 宋运周"
   pronouns         : "He/Him" 
   bio              : "I'm glad to be called Tim! "
   location         : "Philadelphia, U.S."
