--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ repository               : "github.com/TimSong412"
 author:
   # Biographic information
   avatar           : "TimSong.jpg"
-  name             : "Tim (Yunzhou) Song \n 宋运周"
-  pronouns         : "He/Him" 
+  name             : "Tim (Yunzhou) Song"
+  pronouns         : "宋运周" 
   bio              : "I'm glad to be called Tim! "
   location         : "Philadelphia, U.S."
   employer         : "University of Pennsylvania"
